--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#MYSQL DATABASE CONFIGURATIONS
+spring.datasource.url=jdbc:mysql:///invoiceprocessingsystem
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#HIBERNATE CONFIGURATION
+spring.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
