--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#HIBERNATE CONFIGURATION
-spring.hibernate.ddl-auto=update
+#HIBERNATE CONFIGURATIONS
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
